--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SunBeam</title>
 </head>
+
 <body>
     <h1>This is Sunbeam Website</h1>
-<a href="courses.html">Courses</a>
+    <a href="courses.html">Courses</a>
+    <a href="students.html">Students</a>
 </body>
+
 </html>
