--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h1>This is Sunbeam Website</h1>
     <a href="courses.html">Courses</a>
     <a href="students.html">Students</a>
+    <a href="contactUS.html">Contact US</a>
 </body>
 
 </html>
