--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <a href="students.html">Students</a>
     <a href="aboutUs.html">About US</a>
     <a href="contactUS.html">Contact US</a>
+    <a href="faculties.html">Faculties</a>
 </body>
 
 </html>
